[tool.poetry]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = "Fetch research papers from PubMed with authors from pharmaceutical companies"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "pubmed_paper_fetcher"}]

[tool.poetry.dependencies]
python = "^3.8"
biopython = "^1.81"
pandas = "^2.0.0"
tqdm = "^4.65.0"
typing-extensions = "^4.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"

[tool.poetry.scripts]
get-papers-list = "pubmed_paper_fetcher.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"